<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@color/black">

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="vertical">

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="vertical"
			android:gravity="center"
			android:layout_gravity="center"
			android:paddingBottom="13dp"
			android:paddingTop="32dp">

			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/about"
				android:textStyle="bold"
				android:textSize="25sp"
				android:textColor="#FFFFFF"/>

		</LinearLayout>

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="vertical"
			android:gravity="left">

			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/about_subtile"
				android:textColor="#AAA6A6"
				android:textSize="16sp"
				android:layout_margin="5dp"/>

			<TextView
				android:id="@+id/nav_headerAppVersion"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/about_text"
				android:textColor="#AAA6A6"
				android:textSize="14sp"
				android:layout_margin="5dp"/>

			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/about_text2"
				android:textColor="#AAA6A6"
				android:textSize="14sp"
				android:layout_margin="5dp"/>

			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/about_text3"
				android:textColor="#AAA6A6"
				android:textSize="14sp"
				android:layout_margin="5dp"/>


			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/developed_by"
				android:textColor="#ff0000"
				android:textSize="14sp"
				android:layout_margin="5dp"/>

		</LinearLayout>

	</LinearLayout>

</LinearLayout>

