<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">


    <LinearLayout
        android:id="@+id/activity_settingsLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        tools:ignore="MissingClass">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/export_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/black"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark">
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@color/primary_color_variant"
            android:orientation="vertical"
            android:padding="3dp">



            <EditText
                android:id="@+id/config_file_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/export_file_name_set"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@color/primary_color_variant"
            android:orientation="vertical"
            android:padding="3dp">


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/lock_config"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/export_config_lock" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/lock_login_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/export_config_lock_login" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/lock_config_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/export_config_lock_settings" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/lock_only_mobile_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/only_mobile_data" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/lock_config_validate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/set_validate_date" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/primary_color_variant"
            android:orientation="vertical"
            android:padding="3dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/config_msg"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/config_msg"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:ems="10"
                android:hint="@string/config_msg_input"
                android:inputType="textMultiLine|textLongMessage"
                android:singleLine="false"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/export_config_button"
                android:textStyle="bold"
                android:text="@string/export_conf"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:backgroundTint="@color/white"
                app:cornerRadius="8dp"
                app:rippleColor="#33AAAAAA"
                app:strokeColor="@color/white"
                app:strokeWidth="2dp" />

        </LinearLayout>




    </LinearLayout>

    </ScrollView>

</RelativeLayout>