<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/black"
	android:elevation="4dp"
	android:orientation="vertical"
	android:theme="@style/ThemeOverlay.AppCompat.Dark"
	app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
	tools:context=".settings.AllowedAppsActivity">

	<include layout="@layout/toolbar_main" />


	<ImageView
		android:layout_width="50dp"
		android:layout_height="50dp"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="30dp"
		android:src="@drawable/baseline_app_settings_alt_24" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginBottom="8dp"
		android:layout_marginTop="20dp"
		android:gravity="center"
		android:text="@string/splittunneling"
		android:textColor="@color/white" />

	<LinearLayout
		android:id="@+id/tunnelBanner"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:orientation="horizontal"
		android:weightSum="2">

		<Button
			android:id="@+id/btnSelectAll"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="20dp"
			android:layout_marginEnd="20dp"
			android:layout_weight="1"
			android:backgroundTint="#2196F3"
			android:text="@string/block_all"
			android:textAllCaps="false"
			android:textColor="@color/white" />

		<Button
			android:id="@+id/btnDeselectAll"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="20dp"
			android:layout_marginEnd="20dp"
			android:layout_weight="1"
			android:text="@string/unblock_all"
			android:textAllCaps="false"
			android:backgroundTint="#2196F3"
			android:textColor="@color/white"
			/>

	</LinearLayout>

	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/splitRecyclerView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
		tools:listitem="@layout/item_app" />


</LinearLayout>